Alteração no novo modelo de card.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <div class="card_curso box-card gdp">
                 <!-- <img src="https://picsum.photos/500/300/?image=10" alt="teste"> -->
                 <div class="card_capa">
+                  <!-- <img src="https://picsum.photos/500/300/?image=5" alt=""> -->
                   <h1>ATENDIMENTO AO PÚBLICO</h1>
                   <p>20h/a</p>
                 </div>
