--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
                 <!-- <img src="https://picsum.photos/500/300/?image=10" alt="teste"> -->
                 <div class="card_capa">
                   <!-- <img src="https://picsum.photos/500/300/?image=5" alt=""> -->
+                  <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>ATENDIMENTO AO PÚBLICO</h1>
                   <p>20h/a</p>
                 </div>
-                <div class="card_conteudo">
+                <div class="card_conteudo desat">
                   <!-- <h1>ATENDIMENTO AO PÚBLICO - 20h/a</h1> -->
                   <p><b>Inscrição:</b> a partir de 11/01/2023</p>
                   <p><b>Realização:</b> a partir de 11/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Promover o acesso às informações que favoreçam a compreensão da importância do bom atendimento ao cidadão pelos servidores públicos, apresentando aspectos referentes ao serviço público e ao atendimento.</p>
                   <div class="btn_conteudo">
-                    <button id="curso1" class="btn_objetivo">Objetivo</button>
+                    <button class="btn_objetivo">Objetivo</button>
                     <button class="btn_inscrevase">Inscreva-se</button>
                   </div>
                 </div>
@@ -57,6 +58,7 @@
               <div class="card_curso box-card gdp">
                 <!-- <img src="https://picsum.photos/500/300/?image=11" alt="teste"> -->
                 <div class="card_capa">
+                  <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS</h1>
                   <p>60h/a</p>
                 </div>
@@ -66,7 +68,7 @@
                   <p><b>Realização:</b> a partir de 30/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Favorecer a compreensão do conceito de Gestão para Resultados aplicado na implementação das políticas públicas, enfatizando avanços, desafios, status atual e próximos passos desse modelo de gestão no Estado do Ceará.</p>
                   <div class="btn_conteudo">
-                    <button id="curso2" class="btn_objetivo">Objetivo</button>
+                    <button class="btn_objetivo">Objetivo</button>
                     <button class="btn_inscrevase">Inscreva-se</button>
                   </div>
                 </div>
@@ -74,6 +76,7 @@
               <div class="card_curso box-card tic">
                 <!-- <img src="https://picsum.photos/500/300/?image=2" alt="teste"> -->
                 <div class="card_capa">
+                  <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>CALC INTERMEDIÁRIO E AVANÇADO</h1>
                   <p>30h/a</p>
                 </div>
@@ -83,7 +86,7 @@
                   <p><b>Realização:</b> a partir de 16/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Apresentar os conceitos intermediários e avançados iniciais, acerca de planilhas eletrônicas, proporcionando aos participantes o desenvolvimento de habilidades para sua criação e manipulação, por meio da utilização do Libreoffice Calc.</p>
                   <div class="btn_conteudo">
-                    <button id="curso3" class="btn_objetivo">Objetivo</button>
+                    <button class="btn_objetivo">Objetivo</button>
                     <button class="btn_inscrevase">Inscreva-se</button>
                   </div>
                 </div>
