Finalização do novo modelo. Os três modelos foram finalizados.

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   
             <div class="cards_curso">
               <div class="card_curso box-card gdp">
-                <!-- <img src="https://picsum.photos/500/300/?image=10" alt="teste"> -->
-                <div class="card_capa">
-                  <!-- <img src="https://picsum.photos/500/300/?image=5" alt=""> -->
+                <div class="card_capa2">
+                  <div class="imagem_capa">                    
+                    <img src="https://picsum.photos/500/300/?image=13" alt="">
+                  </div>
                   <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>ATENDIMENTO AO PÚBLICO</h1>
                   <p>20h/a</p>
                 </div>
-                <div class="card_conteudo desat">
-                  <!-- <h1>ATENDIMENTO AO PÚBLICO - 20h/a</h1> -->
+                <div class="card_conteudo2">
                   <p><b>Inscrição:</b> a partir de 11/01/2023</p>
                   <p><b>Realização:</b> a partir de 11/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Promover o acesso às informações que favoreçam a compreensão da importância do bom atendimento ao cidadão pelos servidores públicos, apresentando aspectos referentes ao serviço público e ao atendimento.</p>
@@ -56,14 +56,15 @@
                 </div>
               </div>
               <div class="card_curso box-card gdp">
-                <!-- <img src="https://picsum.photos/500/300/?image=11" alt="teste"> -->
-                <div class="card_capa">
+                <div class="card_capa2">
+                  <div class="imagem_capa">                    
+                    <img src="https://picsum.photos/500/300/?image=11" alt="">
+                  </div>
                   <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS</h1>
                   <p>60h/a</p>
                 </div>
-                <div class="card_conteudo">
-                  <!-- <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS - 60h/a</h1> -->
+                <div class="card_conteudo2">
                   <p><b>Inscrição:</b> a partir de 30/01/2023</p>
                   <p><b>Realização:</b> a partir de 30/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Favorecer a compreensão do conceito de Gestão para Resultados aplicado na implementação das políticas públicas, enfatizando avanços, desafios, status atual e próximos passos desse modelo de gestão no Estado do Ceará.</p>
@@ -74,14 +75,15 @@
                 </div>
               </div>
               <div class="card_curso box-card tic">
-                <!-- <img src="https://picsum.photos/500/300/?image=2" alt="teste"> -->
-                <div class="card_capa">
+                <div class="card_capa2">
+                  <div class="imagem_capa">                    
+                    <img src="https://picsum.photos/500/300/?image=12" alt="">
+                  </div>
                   <p class="sem_turma">Sem inscrições no momento</p>
                   <h1>CALC INTERMEDIÁRIO E AVANÇADO</h1>
                   <p>30h/a</p>
                 </div>
-                <div class="card_conteudo">
-                  <!-- <h1>CALC INTERMEDIÁRIO E AVANÇADO - 30h/a</h1> -->
+                <div class="card_conteudo2">
                   <p><b>Inscrição:</b> a partir de 16/01/2023</p>
                   <p><b>Realização:</b> a partir de 16/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Apresentar os conceitos intermediários e avançados iniciais, acerca de planilhas eletrônicas, proporcionando aos participantes o desenvolvimento de habilidades para sua criação e manipulação, por meio da utilização do Libreoffice Calc.</p>
@@ -91,6 +93,61 @@
                   </div>
                 </div>
               </div>
+
+
+
+
+              <div class="card_curso box-card gdp">
+                <div class="card_capa">
+                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <h1>ATENDIMENTO AO PÚBLICO</h1>
+                  <p>20h/a</p>
+                </div>
+                <div class="card_conteudo">
+                  <p><b>Inscrição:</b> a partir de 11/01/2023</p>
+                  <p><b>Realização:</b> a partir de 11/01/2023</p>
+                  <p class="objetivo"><b>Objetivo: </b>Promover o acesso às informações que favoreçam a compreensão da importância do bom atendimento ao cidadão pelos servidores públicos, apresentando aspectos referentes ao serviço público e ao atendimento.</p>
+                  <div class="btn_conteudo">
+                    <button class="btn_objetivo">Objetivo</button>
+                    <button class="btn_inscrevase">Inscreva-se</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card_curso box-card gdp">
+                <div class="card_capa">
+                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS</h1>
+                  <p>60h/a</p>
+                </div>
+                <div class="card_conteudo">
+                  <p><b>Inscrição:</b> a partir de 30/01/2023</p>
+                  <p><b>Realização:</b> a partir de 30/01/2023</p>
+                  <p class="objetivo"><b>Objetivo: </b>Favorecer a compreensão do conceito de Gestão para Resultados aplicado na implementação das políticas públicas, enfatizando avanços, desafios, status atual e próximos passos desse modelo de gestão no Estado do Ceará.</p>
+                  <div class="btn_conteudo">
+                    <button class="btn_objetivo">Objetivo</button>
+                    <button class="btn_inscrevase">Inscreva-se</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card_curso box-card tic">
+                <div class="card_capa">
+                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <h1>CALC INTERMEDIÁRIO E AVANÇADO</h1>
+                  <p>30h/a</p>
+                </div>
+                <div class="card_conteudo">
+                  <p><b>Inscrição:</b> a partir de 16/01/2023</p>
+                  <p><b>Realização:</b> a partir de 16/01/2023</p>
+                  <p class="objetivo"><b>Objetivo: </b>Apresentar os conceitos intermediários e avançados iniciais, acerca de planilhas eletrônicas, proporcionando aos participantes o desenvolvimento de habilidades para sua criação e manipulação, por meio da utilização do Libreoffice Calc.</p>
+                  <div class="btn_conteudo">
+                    <button class="btn_objetivo">Objetivo</button>
+                    <button class="btn_inscrevase">Inscreva-se</button>
+                  </div>
+                </div>
+              </div>
+
+
+
               <div class="card_curso box-card tic">
                 <img src="https://picsum.photos/500/300/?image=5" alt="teste">
                 <div class="card_conteudo">
