--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <div class="imagem_capa">                    
                     <img src="https://picsum.photos/500/300/?image=13" alt="">
                   </div>
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma2">Em Breve</p>
                   <h1>ATENDIMENTO AO PÚBLICO</h1>
                   <p>20h/a</p>
                 </div>
@@ -51,7 +51,7 @@
                   <p class="objetivo"><b>Objetivo: </b>Promover o acesso às informações que favoreçam a compreensão da importância do bom atendimento ao cidadão pelos servidores públicos, apresentando aspectos referentes ao serviço público e ao atendimento.</p>
                   <div class="btn_conteudo">
                     <button class="btn_objetivo">Objetivo</button>
-                    <button class="btn_inscrevase">Inscreva-se</button>
+                    <button class="btn_inscrevase2">Inscreva-se</button>
                   </div>
                 </div>
               </div>
@@ -60,7 +60,7 @@
                   <div class="imagem_capa">                    
                     <img src="https://picsum.photos/500/300/?image=11" alt="">
                   </div>
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma2">Em Breve</p>
                   <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS</h1>
                   <p>60h/a</p>
                 </div>
@@ -70,7 +70,7 @@
                   <p class="objetivo"><b>Objetivo: </b>Favorecer a compreensão do conceito de Gestão para Resultados aplicado na implementação das políticas públicas, enfatizando avanços, desafios, status atual e próximos passos desse modelo de gestão no Estado do Ceará.</p>
                   <div class="btn_conteudo">
                     <button class="btn_objetivo">Objetivo</button>
-                    <button class="btn_inscrevase">Inscreva-se</button>
+                    <button class="btn_inscrevase2">Inscreva-se</button>
                   </div>
                 </div>
               </div>
@@ -79,17 +79,17 @@
                   <div class="imagem_capa">                    
                     <img src="https://picsum.photos/500/300/?image=12" alt="">
                   </div>
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma2">Em Breve</p>
                   <h1>CALC INTERMEDIÁRIO E AVANÇADO</h1>
                   <p>30h/a</p>
                 </div>
-                <div class="card_conteudo2">
+                <div class="card_conteudo2 desat">
                   <p><b>Inscrição:</b> a partir de 16/01/2023</p>
                   <p><b>Realização:</b> a partir de 16/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Apresentar os conceitos intermediários e avançados iniciais, acerca de planilhas eletrônicas, proporcionando aos participantes o desenvolvimento de habilidades para sua criação e manipulação, por meio da utilização do Libreoffice Calc.</p>
                   <div class="btn_conteudo">
                     <button class="btn_objetivo">Objetivo</button>
-                    <button class="btn_inscrevase">Inscreva-se</button>
+                    <button class="btn_inscrevase2">Inscreva-se</button>
                   </div>
                 </div>
               </div>
@@ -99,7 +99,7 @@
 
               <div class="card_curso box-card gdp">
                 <div class="card_capa">
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma">Em Breve</p>
                   <h1>ATENDIMENTO AO PÚBLICO</h1>
                   <p>20h/a</p>
                 </div>
@@ -115,11 +115,11 @@
               </div>
               <div class="card_curso box-card gdp">
                 <div class="card_capa">
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma">Em Breve</p>
                   <h1>ATUALIZAÇÃO EM GESTÃO PÚBLICA PARA RESULTADOS</h1>
                   <p>60h/a</p>
                 </div>
-                <div class="card_conteudo">
+                <div class="card_conteudo desat">
                   <p><b>Inscrição:</b> a partir de 30/01/2023</p>
                   <p><b>Realização:</b> a partir de 30/01/2023</p>
                   <p class="objetivo"><b>Objetivo: </b>Favorecer a compreensão do conceito de Gestão para Resultados aplicado na implementação das políticas públicas, enfatizando avanços, desafios, status atual e próximos passos desse modelo de gestão no Estado do Ceará.</p>
@@ -131,7 +131,7 @@
               </div>
               <div class="card_curso box-card tic">
                 <div class="card_capa">
-                  <p class="sem_turma">Sem inscrições no momento</p>
+                  <p class="sem_turma">Em Breve</p>
                   <h1>CALC INTERMEDIÁRIO E AVANÇADO</h1>
                   <p>30h/a</p>
                 </div>
@@ -173,7 +173,7 @@
                     <button class="btn_inscrevase">Inscreva-se</button>
                   </div>
                 </div>
-              </div>
+              </div>               
               <div class="card_curso box-card af">
                 <img src="https://picsum.photos/500/300/?image=5" alt="teste">
                 <div class="card_conteudo">
@@ -187,6 +187,7 @@
                   </div>
                 </div>
               </div>
+              <!--
               <div class="card_curso box-card mo">
                 <img src="https://picsum.photos/500/300/?image=14" alt="teste">
                 <div class="card_conteudo">
@@ -435,6 +436,7 @@
                 </div>
               </div>
             </div>
+            -->
   
             <!-- <div class="box_content_flip box-card gdp" id="box_content">
               <div class="face box_front">
